2012-01-13  Hajime Morrita  <morrita@chromium.org>

        [Mac][DRT] Should support --no-timeout
        https://bugs.webkit.org/show_bug.cgi?id=76242

        Reviewed by Darin Adler.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (initializeGlobalsFromCommandLineOptions): Added "--no-timeout" to the options list.
        (setWaitToDumpWatchdog): Added to encapsulate the waitToDumpWatchdog global variable.
        (shouldSetWaitToDumpWatchdog): Added to check the useTimeoutWatchdog flag set by the option.
        * DumpRenderTree/mac/DumpRenderTreeMac.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setWaitToDump): Now calls shouldSetWaitToDumpWatchdog() to check the flag.

2012-01-12  Simon Fraser  <simon.fraser@apple.com>

        Mitigate scrollbar differences when running pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=67217

        Reviewed by Dan Bernstein.
        
        Enable mock scrollbars by default for tests.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):

2012-01-12  Ryosuke Niwa  <rniwa@webkit.org>

        Need a script to run tests in PerformanceTests
        https://bugs.webkit.org/show_bug.cgi?id=76132

        Reviewed by Adam Barth.

        Add run-perf-tests to run performance tests using parser/resources/runner.js.
        Unfortunately, there isn't an easy way of telling which test uses which format
        so hard-code directory that uses Chromium perf-bot style (only inspector perf. tests for now).

        All test outputs are re-formatted to match Chromium perf-bot style.

        * Scripts/run-inspector-perf-tests.py:
        * Scripts/run-perf-tests: Added.
        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner):
        (PerfTestsRunner.__init__):