@@ -1,3 +1,13 @@
+2012-01-13  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [Qt][WK2]REGRESSION(r104881):It broke hundreds of tests
+        https://bugs.webkit.org/show_bug.cgi?id=76247
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        * WebKitTestRunner/TestController.cpp:
+        (WTR::TestController::resetStateToConsistentValues): Disable mock scrollbars on Qt by default. (workaround)
+
 2012-01-13  Hajime Morrita  <morrita@chromium.org>
 
         [Mac][DRT] Should support --no-timeout
